    database, using the form used in the proposed database policy at
    http://people.debian.org/~seanius/policy/dbapp-policy.html.
    (Closes: Bug#282369)
  * Change password in debian readme back to schooltool. (Closes: Bug#283430)
  * Stop postinst scripts from adding blank lines to config files.
  * Remove un-needed build dependency on python2.3.
  * Make debconf questions for interface setup more clear.
    (Closes: Bug#280698)
  * On first installation, set default locale from default system locale.
  * Change the section of libschooltool and libschooltool-clients to libs.
  * Fix python dependencies to cope with upcoming python version 2.4
    - Use python 2.3 explicity.
  * Undo past changes of putting some modules in /usr/share. It was a
    violation of the FHS because the .py files are bytecompiled on
    installation. There are now a _LOT_ of lintian warnings about arch-indep
    files in /usr/lib, but this is the lesser evil.
  * Fix package description style to conform to some new lintian warnings and
    fixed spelling errors in templates.
  * Disabled the wxschooltool client and removed it from the packages.
  * Fix bug in setting the default language if /etc/environment does not
    contain LANG=.
  * Added french debconf translation, patch thanks to, Jean-Luc Coulon.
    (Closes: Bug#290389)
  * Re-wrote the package templates for DTSG compliance, patch thanks to,
    Martin Quinson and Christian Perrier. (Closes: Bug#288805)
  * Added chezh translation, patch thanks to Miroslav Kure.
  * Reduced the changes necessary to update packages to a new python version
    to one line. Thanks to a suggestion from Matthias Klose.
  * Temporarily patch rules to install zope modules from the zope tree because
    no zope3 package exists yet. Sigh! more lintian warnings, but it's
    temporary and way too much effort to fix this.

 -- Brian Sutherland <jinty@web.de>  Thu, 25 Nov 2004 21:26:40 +0100

schooltool (0.7.99+0.8rc1-1) unstable; urgency=low
